--- a/assets/section-header.css
+++ b/assets/section-header.css
@@ -281,3 +281,32 @@ sticky-header.header-wrapper {
   background: var(--color-base-accent-2);
   border-radius: 5px;
 }
+
+.menu-drawer .menu-drawer__menu-item--sun .menu-opening[open] .menu-drawer__mobil--sale-span__sun {
+  background-color: var(--color-base-accent-2) !important;
+  border-radius: 4px;
+  padding-left: 12px;
+  padding-right: 12px;
+  margin-left: -12px;
+}
+
+.menu-drawer .menu-drawer__inner-submenu .menu-drawer__menu-item--sun .menu-drawer__mobil--sale-span__sun {
+  background-color: unset !important;
+}
+
+.menu-drawer .menu-drawer__menu-item--sun .menu-opening[open] .icon-plus {
+  display: none !important;
+}
+
+.menu-drawer .menu-drawer__menu-item--sun .menu-drawer__menu-item .icon-plus {
+  display: block !important;
+}
+
+.menu-drawer .menu-drawer__menu-item--sun .menu-opening[open] .icon-minus {
+  width: 1.3rem !important;
+  display: block !important;
+}
+
+.menu-drawer .menu-drawer__menu-item--sun .menu-drawer__menu-item .icon-minus {
+  display: none !important;
+}
