--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -174,7 +174,7 @@ fieldset.product-form__input .form__label {
 
 .product-form__input input[type='radio'] + label {
   border: 0.1rem solid var(--color-foreground-55);
-  border-radius: 4rem;
+  border-radius: 0rem;
   background-color: var(--color-background);
   color: var(--color-foreground);
   display: inline-block;
@@ -921,4 +921,58 @@ a.product__text {
   height: auto;
   margin: 0;
   width: 2.2rem;
+}
+
+.disabled-label {
+  text-decoration: line-through;
+  pointer-events: none;
+  opacity: .5;
+}
+.label__swatch {
+  width: 38px;
+  height: 42px;
+  color: transparent !important;
+  flex-shrink: 0;
+}
+
+.label__swatch {
+  position: relative;
+}
+
+.product-form__input input[type=radio]:checked+label.label__swatch:after {
+  width: 30px;
+  height: 30px;
+  content: '';
+  display: block;
+  background: white;
+  position: absolute;
+  left: 5px;
+  top: 5px;
+  border-radius: 0%;
+}
+label.disabled-label.label__swatch:before {
+  background: linear-gradient(to top left,
+           rgba(0,0,0,0) 0%,
+           rgba(0,0,0,0) calc(50% - 0.8px),
+           #f60054 50%,
+           rgba(0,0,0,0) calc(50% + 0.8px),
+           rgba(0,0,0,0) 100%),
+       linear-gradient(to top right,
+           rgba(0,0,0,0) 0%,
+           rgba(0,0,0,0) calc(50% - 0.8px),
+           #f60054 50%,
+           rgba(0,0,0,0) calc(50% + 0.8px),
+           rgba(0,0,0,0) 100%) !important;
+  width: 100%;
+  height: 100%;
+  content: '';
+  position: absolute;
+  left: 0;
+  z-index: 999;
+  top: 0;
+  transition: .2s all;
+}
+
+.label__swatch {
+  overflow: hidden;
 }
