--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -7,7 +7,7 @@ body.template-collection {
 }
 
 .header__inline-menu {
-  position: sticky;
+  /*position: sticky;*/
   top: 0;
 }
 
@@ -219,6 +219,10 @@ body.template-collection {
   -ms-grid-rows: auto 2.5rem auto;
   grid-template-rows: auto auto;
   gap: 2.5rem 2rem;
+}
+
+.facets__form-grid {
+  display: unset;
 }
 
 .facets__form > *:nth-child(1) {
